--- a/DxLibOriginalGame/DxLibOriginalGame.vcxproj
+++ b/DxLibOriginalGame/DxLibOriginalGame.vcxproj
@@ -142,10 +142,12 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Slime.cpp" />
     <ClCompile Include="Vec2.cpp" />
+    <ClCompile Include="Wizard.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Slime.h" />
     <ClInclude Include="Vec2.h" />
+    <ClInclude Include="Wizard.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
