--- a/DxLibOriginalGame/DxLibOriginalGame.vcxproj
+++ b/DxLibOriginalGame/DxLibOriginalGame.vcxproj
@@ -139,12 +139,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="EnemyBase.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Slime.cpp" />
     <ClCompile Include="Vec2.cpp" />
     <ClCompile Include="Wizard.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="EnemyBase.h" />
     <ClInclude Include="Slime.h" />
     <ClInclude Include="Vec2.h" />
     <ClInclude Include="Wizard.h" />
