--- a/OG_Game_music/OG_Game_music.vcxproj.filters
+++ b/OG_Game_music/OG_Game_music.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="Scene\OptionScene.cpp">
       <Filter>ソース ファイル\Scene</Filter>
     </ClCompile>
+    <ClCompile Include="Game.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Scene\Player.h">
@@ -109,6 +112,9 @@
     </ClInclude>
     <ClInclude Include="Scene\OptionScene.h">
       <Filter>ヘッダー ファイル\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="Game.h">
+      <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
