--- a/OG_Game_music/OG_Game_music.vcxproj
+++ b/OG_Game_music/OG_Game_music.vcxproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="EnemyLine.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Scene\OptionScene.cpp" />
     <ClCompile Include="Scene\GamePlayingScene.cpp" />
@@ -159,6 +160,7 @@
   <ItemGroup>
     <ClInclude Include="Application.h" />
     <ClInclude Include="Enemy.h" />
+    <ClInclude Include="EnemyLine.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Scene\OptionScene.h" />
     <ClInclude Include="Scene\GamePlayingScene.h" />
