--- a/OG_Game_music/OG_Game_music.vcxproj
+++ b/OG_Game_music/OG_Game_music.vcxproj
@@ -148,7 +148,7 @@
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Scene\PauseScene.cpp" />
-    <ClCompile Include="Scene\Player.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="queue.cpp" />
     <ClCompile Include="Rect.cpp" />
     <ClCompile Include="Scene\Scene.cpp" />
@@ -166,7 +166,7 @@
     <ClInclude Include="Scene\GamePlayingScene.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="Scene\PauseScene.h" />
-    <ClInclude Include="Scene\Player.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="queue.h" />
     <ClInclude Include="Rect.h" />
     <ClInclude Include="Scene\Scene.h" />
