--- a/Paiza/Paiza.vcxproj.filters
+++ b/Paiza/Paiza.vcxproj.filters
@@ -15,10 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ConsoleApplication1.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="test.cpp">
+    <ClCompile Include="Saiki.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
